Dark Theme Visibility Fixes (#5646)
* Dark mode fixes
Edited dark theme scrollbar fix to dark.css to overwrite color -jr-scrollbar-thumb and -jr-scrollbar-track in dark.css. Switched base theme background for group selection number highlight back to green. Added dark theme to OO/Libreoffice style selection pane.

fixes #5646

* Fixed formatting problem with changelog entry

* Dark mode fixes
Edited dark theme scrollbar fix to dark.css to overwrite color -jr-scrollbar-thumb and -jr-scrollbar-track in dark.css. Switched base theme background for group selection number highlight back to green. Added dark theme to OO/Libreoffice style selection pane.

fixes #5646

* Added override to getTheme

* Resolved conflicts
changelog.md (63)
StyleSelectDialogView (83-84)

* Remove unused variable

* Fix checkstyle

--- a/src/main/java/org/jabref/gui/groups/GroupTree.css
+++ b/src/main/java/org/jabref/gui/groups/GroupTree.css
@@ -29,14 +29,6 @@
     -fx-fill: -jr-group-hits-fg;
 }
 
-.numberColumn > .hits:any-selected {
-    -fx-background-color: derive(-jr-green, 70%);
-}
-
-.numberColumn > .hits:all-selected {
-    -fx-background-color: -jr-green;
-}
-
 .disclosureNodeColumn {
     -fx-alignment: top-right;
 }
